# Console3D

./: .gitignore  CMakeLists.txt  README.md
C++/: README.md
C++/include/: ScreenRender.hpp
C++/src/: main.cpp
include/: Cube.hpp  Face.hpp  Line.hpp  Model.hpp  Piramid.hpp  Pyramid.hpp  Screen.hpp  ScreenRender.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
rust/: Cargo.toml
rust/src/: main.rs  screen.rs
src/: Screen.cpp  main.cpp
